fix alignments

--- a/src/views/common/top-artist/style.css
+++ b/src/views/common/top-artist/style.css
@@ -137,7 +137,7 @@
     overflow-wrap: anywhere;
   }
 
-  .top-card-primary {
+  .top-card-information {
     align-items: center;
   }
 
